* Sat Feb 03 2023 <eric.gerbier@tutanota.com> 2.18
- fix --cap-frpm-fs is not as expected when use libcap-2.32 (xujing)

* Tue Jan 10 2023 <eric.gerbier@tutanota.com> 2.17
- fix -r does not work (xujing)
- fix spelling errors that could mislead users (xujing)
- fix --comment-missing=n does not work (xujing)
- fix --cap-from-fs does not work (xujing)
- all shell are bash
- clean test x$var, use -z
- change email to tutanota
- change copyright year
- change gpg key
- fix warnings from shellcheck
- add unitary tests for plugins and options
- if batch mode, do not edit any spec part
- spec_only : display spec name if successfull
- echo+read in one line with read -p
- add new plugin exclude_file to exclude files from spec
- split tests in t directory
- bugfix in nodoc plugin
- rename internal variable with RPMREBUILD_ prefix

* Sun Jan 17 2021 <eric.gerbier@tutanota.com> 2.16-1
- fix bug if more than 10 args (thanks Dmitry V. Levin)
- add signal trapping to clean directory
- fix warnings from shellcheck
- fix problem when rebuild filesystem package (builroot not a directory)
- fix installation test for kernel and multi-arch packages

* Fri Feb 21 2020 <eric.gerbier@tutanota.com> 2.15-1
- fix error on rpmrebuild_files.sh line 204 (verify tag)
- use env in shebang to avoid path problemes (/bin versus /usr/bin)
- updated htmc doc (features, usage)
- avoid shebang translation for rpmrebuild packages (__brp_mangle_shebangs macro)
- fix bug on change-spec-preamble (move processing_init before CommandLineParsing) thanks Nerijus
- fix cpio problem : add --no-absolute-filenames option
- better diagnostic on internal error
- fix bug on conditional requires (with space)

* Fri Oct 19 2018 <eric.gerbier@tutanota.com> 2.14-1
- add list of optional tags, to allow rpmrebuild work with old rpm versions
- add dependency on setarch
- add debug code (calls on functions)
- use local variables to avoid conflicts
- rewrite html target in Makefile
- suppress VERSION (use Version)