@@ -1,5 +1,6 @@
 * Sat Feb 03 2023 <eric.gerbier@tutanota.com> 2.18
 - fix --cap-frpm-fs is not as expected when use libcap-2.32 (xujing)
+- reset %defattr when users want to keep files permission, uid and gid (xujing)
 
 * Tue Jan 10 2023 <eric.gerbier@tutanota.com> 2.17
 - fix -r does not work (xujing)
